k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: opbackend-deployment
  namespace: opsentrix

spec:
  replicas: 2
  selector:
    matchLabels:
      app: opbackend
  template:
    metadata:
      name: opbackend-pod
      namespace: opsentrix
      labels: 
        app: opbackend
    spec:
      containers:
        - name: opsentrix-backend
          image: etherealfrost019/opsentrix-backend
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
            requests:
              cpu: "250m"
              memory: "64Mi"
          ports:
            - containerPort: 4000
          imagePullPolicy: Always

          livenessProbe:
            httpGet:
              path: /healthz
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 5

          startupProbe:
            httpGet:
              path: /healthz
              port: 4000
            failureThreshold: 30
            periodSeconds: 10
