k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: opfrontend-deployment
  namespace: opsentrix

spec:
  replicas: 2
  selector:
    matchLabels:
      app: opfrontend
  template:
    metadata:
      name: opfrontend-pod
      namespace: opsentrix
      labels:
        app: opfrontend
    spec:
      containers:
        - name: opsentrix-frontend
          image: etherealfrost019/opsentrix-frontend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 3000
          imagePullPolicy: Always

          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3000  
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /api/ready
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5

          startupProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
