k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: opservice-backend
  namespace: opsentrix

spec:
  selector:
    app: opbackend

  ports:
  - port: 4000
    targetPort: 4000
    
  type: ClusterIP
