k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: opsentrix-gateway
  namespace: opsentrix
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - "*"
    tls:
      mode: SIMPLE
      credentialName: tls-cert   # Kubernetes secret that holds the TLS certs, which i don't have yet :D
