k8s/istio-dr-backend.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: opsentrix-dr-backend
  namespace: opsentrix

spec:
  host: opservice-backend
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

    connectionPool:
      tcp:
        maxConnections: 50
      http:
        http1MaxPendingRequests: 30
        maxRequestsPerConnection: 5

    outlierDetection:
      consecutive5xxErrors: 5
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
