k8s/istio-dr-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: opsentrix-dr
  namespace: opsentrix

spec:
  host: opservice-frontend
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

    connectionPool:
      tcp:
        maxConnections: 50
      http:
        http1MaxPendingRequests: 30
        maxRequestsPerConnection: 5
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
