k8s/istio-vs-backend.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: opsentrix-vs-backend
  namespace: opsentrix
spec:
  hosts:
  - "*"
  gateways:
  - opsentrix-gateway
  http:
  - match:
    - uri:
        prefix: "/telemetry"
    - uri:
        prefix: "/socket.io"
    route:
    - destination:
        host: opservice-backend
        port:
          number: 4000
