k8s/istio-vs-frontend.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: opsentrix-vs-frontend
  namespace: opsentrix
spec:
  hosts:
  - "*"
  gateways:
  - opsentrix-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: opservice-frontend
        port:
          number: 3000
